# svn.slicer.org-Slicer4

./: CMakeLists.txt  GenerateSlicer3Config.cmake  README.md  launch.tcl.in  slicer_variables.tcl  vtkChangeTrackerLogic.cxx  vtkChangeTrackerLogic.h  vtkSlicerVRHelper.h  vtkSlicerVRLabelmapHelper.cxx
Applications/CLI/EndoNavTracking/Tracker/: Bird.h  CMakeLists.txt  EndoNavTracker.cxx  EndoNavTracker.xml  PCIBird3.h  convertData.tcl  vtkMicroBirdTrackingSystem.cxx  vtkMicroBirdTrackingSystem.h  vtkMiniBirdTrackingSystem.cxx  vtkMiniBirdTrackingSystem.h  vtkPCIBirdWin32TrackedVideoSource.cxx  vtkPCIBirdWin32TrackedVideoSource.h  vtkRegistration.cxx  vtkRegistration.h  vtkTrackFileData.cxx  vtkTrackFileData.h  vtkTrackedVideo.cxx  vtkTrackedVideo.h  vtkTrackedVideoData.cxx  vtkTrackedVideoData.h  vtkTrackingSystem.cxx  vtkTrackingSystem.h  vtkWDMVideoSource.cxx  vtkWDMVideoSource.h  vtkWin32TrackedVideoSource.cxx  vtkWin32TrackedVideoSource.h
Libs/IGT/: CMakeLists.txt  IGTDataStream.h  IGTMatrixState.cpp  IGTOpenTrackerStream.cxx  IGTOpenTrackerStream.h  IGTRegistration.xmi  IGTTrackerFamily.xmi  vtkIGTConfigure.h.in  vtkIGTDataManager.cxx  vtkIGTDataManager.h  vtkIGTDataStream.cxx  vtkIGTDataStream.h  vtkIGTIGSTKStream.cxx  vtkIGTIGSTKStream.h  vtkIGTMatrixState.cxx  vtkIGTMatrixState.h  vtkIGTMessageAttributeSet.cxx  vtkIGTMessageAttributeSet.h  vtkIGTMessageGenericAttribute.txx  vtkIGTMessageImageDataAttribute.cxx  vtkIGTMessageImageDataAttribute.h  vtkIGTOpenTrackerStream.cxx  vtkIGTOpenTrackerStream.h  vtkIGTPat2ImgRegistration.cxx
Libs/qCTKWidgets/Testing/: CMakeLists.txt  qCTKAbstractLibraryFactoryTest1.cxx  qCTKAbstractObjectFactoryTest1.cxx  qCTKAbstractPluginFactoryTest1.cxx  qCTKAbstractQObjectFactoryTest1.cxx  qCTKAddRemoveComboBoxTest1.cxx  qCTKButtonGroupTest1.cxx  qCTKCollapsibleButtonTest1.cxx  qCTKCollapsibleGroupBoxTest1.cxx  qCTKColorPickerButtonTest1.cxx  qCTKCoordinatesWidgetTest1.cxx  qCTKFittedTextBrowserTest1.cxx  qCTKFlowLayoutTest1.cxx  qCTKMatrixWidgetTest1.cxx  qCTKPimplTest1.cxx  qCTKSingletonTest1.cxx  qCTKSliderSpinBoxWidgetTest1.cxx  qCTKTitleComboBoxTest1.cxx  qCTKTreeComboBoxTest1.cxx
Libs/qVTKWidgets/Testing/: CMakeLists.txt  qVTKCommandOptionsTest1.cxx  qVTKObjectTest1.cxx
Meshing-V-1-1/Modules/Meshing/MeshingWorkflow/: CMakeLists.txt  vtkMRMLMeshingWorkflowNode.h  vtkMeshingWorkflowGUI.cxx  vtkMeshingWorkflowGUI.h  vtkMeshingWorkflowLogic.h
MeshingIntegration/Modules/UnstructuredGrids/: CMakeLists.txt  vtkSlicerUnstructuredGridsGUI.cxx  vtkSlicerUnstructuredGridsLogic.cxx
MeshingIntegration2/Modules/Meshing/MeshingWorkflow/: CMakeLists.txt  vtkMeshingWorkflowGUI.cxx  vtkMeshingWorkflowGUI.h  vtkMeshingWorkflowMRMLNotebook.cxx
Modules/EndoNav/: CMakeLists.txt  EndoNav.txt  vtkEndoNavGUI.cxx  vtkEndoNavGUI.h  vtkEndoNavLogic.cxx  vtkEndoNavLogic.h  vtkEndoNavWin32Header.h  vtkIGTLCircularBuffer.cxx  vtkIGTLCircularBuffer.h  vtkIGTLConnector.cxx  vtkIGTLConnector.h  vtkIGTLToMRMLBase.cxx  vtkIGTLToMRMLBase.h  vtkIGTLToMRMLImage.cxx  vtkIGTLToMRMLImage.h  vtkIGTLToMRMLLinearTransform.cxx  vtkIGTLToMRMLLinearTransform.h  vtkIGTLToMRMLPosition.cxx  vtkIGTLToMRMLPosition.h  vtkIGTLToViewerImage.cxx  vtkIGTLToViewerImage.h  vtkIGTLToViewerTransform.cxx  vtkIGTLToViewerTransform.h
Modules/FluidMechanicsTractography/: CMakeLists.txt
Modules/Neurosurgery/: CMakeLists.txt  vtkNeurosurgeryGUI.h  vtkNeurosurgeryLogic.h  vtkNeurosurgeryWin32Header.h
Modules/Opentracker/: CMakeLists.txt  vtkOpentrackerGUI.cxx  vtkOpentrackerLogic.h
Modules/Python/FilteredTractography/: CMakeLists.txt  FilteredTractography.py  FilteredTractography_make_step.cmake.in
Modules/RegistrationCuda/: CMakeLists.txt  CUDA_calculateMI.h  CUDA_calculateSSD.h  CUDA_calculateSSDGradient.cu  CUDA_elasticTransformation.cu  Matrix.cxx  ntk2DBSpline3Transform.cpp  ntk2DData16.cpp  ntk2DData16.h  ntk2DElasticRegistration.cpp  ntk2DElasticRegistration.h  ntk2DElasticTransformation.cpp  ntk4DData16.h  ntkBSpline3Transform.cpp  ntkBSpline3Transform.h  ntkDataAligner.cpp  ntkElasticRegistration.cpp  ntkElasticRegistration.h  ntkElasticRegistrationCUDA.cpp  ntkElasticTransformation.cpp  ntkElasticTransformation.h  ntkElasticTransformationCUDA.cpp  ntkElasticTransformationCUDA.h  ntkElasticityMap.cpp  ntkLinearTransformation.cpp  ntkLinearTransformationCUDA.cpp  ntkMISimilarityMeasure.cpp  ntkMISimilarityMeasure.h  ntkMISimilarityMeasureCUDA.cpp  ntkMatrix.h  ntkRegistration.h  ntkRigidRegistration.cpp  ntkRigidRegistration.h  ntkRigidRegistrationCUDA.h  ntkTensor.h  presets.xml  vtkRegistrationCudaModuleWin32Header.h
Modules/Ultrasound/Examples/: CMakeLists.txt  UltrasoundExampleMain.cxx  UltrasoundHeartExample.cxx  vtkUltrasoundExampleGUI.cxx  vtkUltrasoundGUI.h
branches/IGT-old/Modules/BrpNav/: CMakeLists.txt  vtkBrpNavGUI.cxx  vtkBrpNavGUI.h  vtkBrpNavLogic.cxx
branches/IGT-old/Modules/BrpNav/ZFrame/: Makefile  (+2 more)
branches/IGT/Modules/OpenIGTLink/: CMakeLists.txt  vtkIGTLConnector.cxx  vtkOpenIGTLinkGUI.cxx  vtkOpenIGTLinkLogic.cxx  vtkOpenIGTLinkLogic.h  vtkServerSocket.cxx  vtkServerSocket.h  vtkSocket.cxx
branches/cuda/Modules/VolumeRenderingCuda/: CMakeLists.txt  CUDA_renderAlgo.cu  CUDA_renderAlgo.h  cppIntegration.cu  cppIntegration_kernel.cu  cudaRendererInformation.h  cudaVolumeInformation.h  vtkCudaBase.h  vtkCudaDevice.cxx  vtkCudaDevice.h  vtkCudaEvent.cxx  vtkCudaHostMemory.cxx  vtkCudaHostMemory.h  vtkCudaImageData.cxx  vtkCudaImageData.h  vtkCudaImageDataFilter.cxx  vtkCudaImageDataFilter.h  vtkCudaMemory.cxx  vtkCudaMemory.h  vtkCudaMemoryArray.h  vtkCudaMemoryBase.cxx  vtkCudaMemoryBase.h  vtkCudaMemoryCopy.cxx  vtkCudaMemoryCopy.h  vtkCudaMemoryPitch.cxx  vtkCudaMemoryPitch.h  vtkCudaMemoryTexture.cxx  vtkCudaMemoryTexture.h  vtkCudaRendererInformationHandler.cxx  vtkCudaRendererInformationHandler.h  vtkCudaStream.cxx  vtkCudaStream.h  vtkCudaSupport.cxx  vtkCudaSupport.h  vtkCudaVolumeInformationHandler.cxx  vtkCudaVolumeInformationHandler.h  vtkCudaVolumePropertyHandler.cxx  vtkCudaVolumePropertyHandler.h  vtkKWTypeChooserBox.cxx  vtkKWTypeChooserBox.h  (+6 more)
(+2379 files in other folders)
